<resources>

    <!-- naver map -->
    <string name="naver_map_client_id">t2ryjofq99</string>

    <string name="facebook_app_id">1282430322144553</string>
    <string name="fb_login_protocol_scheme">fb1282430322144553</string>

    <string name="app_name">SHAndroidToolUtils</string>
    <string name="exception_count">오류 발생했습니다.\n오류 정보를 이미 담당자에게 보냈습니다.\n앱 다시 시동하시기 바람니다.</string>
    <string name="exception_save">오류 발생했습니다.\n오류 정보 저장 되었습니다.\n오류 처리 화면 이동하겠습니다.</string>

    <string name="upload_start_toast">업로드 시작합니다</string>
    <string name="upload_success_toast">업로드 성공하였습니다</string>
    <string name="upload_failed_toast">업로드 실패하였습니다</string>

    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_friends">Friends</string>
    <string name="title_fragment_event">Event</string>
    <string name="title_fragment_profile">Profile</string>
    <string name="title_activity_start">StartActivity</string>
    <string name="title_activity_circle_count_watch">CircleCountWatch</string>

    <string name="month_picker_december_text">12월</string>
    <string name="month_picker_november_text">11월</string>
    <string name="month_picker_october_text">10월</string>
    <string name="month_picker_september_text">9월</string>
    <string name="month_picker_august_text">8월</string>
    <string name="month_picker_july_text">7월</string>
    <string name="month_picker_june_text">6월</string>
    <string name="month_picker_may_text">5월</string>
    <string name="month_picker_april_text">4월</string>
    <string name="month_picker_march_text">3월</string>
    <string name="month_picker_february_text">2월</string>
    <string name="month_picker_january_text">1월</string>


    <string name="enterprise_device_admin_description">DeviceAdmin class</string>
    <string name="activate_admin">Activate Admin</string>
    <string name="deactivate_admin">Deactivate Admin</string>
    <string name="activate_license">Activate license</string>
    <string name="grant_permissions">Grant Permissions</string>
    <string name="toggle_screen_capture">Toggle Screen Capture</string>

    <string name="click_back_twice_to_get_off">"뒤로 버튼을 한번 더 누르면 종료됩니다."</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
